[gd_scene load_steps=3 format=3 uid="uid://we07vp3nbqis"]

[ext_resource type="Script" uid="uid://cupm4r2bhm24f" path="res://scenes/music_player/spotify_player.gd" id="1_g2141"]
[ext_resource type="Script" uid="uid://d3q6c1bl67eu5" path="res://addons/gopotify/client.gd" id="2_6iqqy"]

[node name="SpotifyPlayer" type="Node"]
script = ExtResource("1_g2141")

[node name="Gopotify" type="HTTPRequest" parent="."]
script = ExtResource("2_6iqqy")
metadata/_custom_type_script = "uid://d3q6c1bl67eu5"

[node name="RequestTimer" type="Timer" parent="."]
one_shot = true

[node name="TrackProgress" type="Timer" parent="."]
one_shot = true

[node name="TrackMonitor" type="Timer" parent="."]
wait_time = 30.0
